objects/ASI_CRM_Province__c.object
<CustomObject>
    <description>ASI_CRM_Province</description>
    <fields>
        <fullName>ASI_CRM_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRM KUALA LUMPUR</fullName>
                </value>
                <value>
                    <fullName>PRM EAST MSIA</fullName>
                </value>
                <value>
                    <fullName>PRM IPOH</fullName>
                </value>
                <value>
                    <fullName>PRM PENANG</fullName>
                </value>
                <value>
                    <fullName>PRM JOHOR BARU</fullName>
                </value>
                <value>
                    <fullName>PRM MALACCA</fullName>
                </value>
                <value>
                    <fullName>PRM KUANTAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>Northern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Province_Code__c</fullName>
        <label>Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Province</label>
    <listViews>
        <fullName>ASI_CRM_CN_Province</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_Province_Code__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Province__c.ASI_CRM_CN_Province</value>
        </filters>
        <label>CN Province</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Province</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_Province_Code__c</columns>
        <columns>ASI_CRM_MY_Region__c</columns>
        <columns>ASI_CRM_MY_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Province__c.ASI_CRM_MY_Province</value>
        </filters>
        <label>MY Province</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Province_Code__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Province Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provinces</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Province</fullName>
        <active>true</active>
        <label>CN Province</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Province</fullName>
        <active>true</active>
        <label>MY Province</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>